--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -81,23 +81,17 @@
                         Html.RenderAction("NavigationItems", "Home");
                     }
                     <li>
-                        <div class="accordion hidden-sm hidden-xs hidden-print" id="accordion2">
-                            <div class="accordion-group">
-                                <div class="accordion-heading">
-                                    <a href="#searchArea" data-toggle="collapse" class="accordion-toggle collapsed" data-parent="#accordion2">
-                                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                                        <span>Search</span>
-                                    </a>
-                                </div>
-                                <div class="searchArea accordion-body collapse" id="searchArea">
-                                    <input id="txtSearchlg" class="searchBar" type="text" style="width:150px;" />
-                                </div>
-                            </div>
+                        <a data-toggle="collapse" href="#searchArea" aria-expanded="false" aria-controls="collapseExample">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            Search
+                        </a>
+                        <div class="searchArea accordion-body collapse" id="searchArea">
+                            <input id="txtSearchlg" class="searchBar" type="text" style="width:150px;" />
                         </div>
                         <div class="searchAreasm hidden-lg hidden-md">
                             <form class="form-inline" role="form">
                                 <div class="icon-addon addon-md">
-                                    <input id="txtSearchsm" class="form-control" type="text" placeholder="Search...">
+                                    <input id="txtSearchsm" class="form-control" type="text" style="padding-left:5px;" placeholder="Search...">
                                     <label for="txtSearchsm" class="glyphicon glyphicon-search"></label>
                                 </div>
                             </form>                      
