--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -5,7 +5,9 @@
 <!-- Jumbotron -->
 <div class="jumbotron">
     <h1>Trafficking Statistics</h1>
+
     <p></p>
+
 </div>
 
 <!-- Creates for all panels -->
@@ -15,7 +17,7 @@
 
         <!-- Quick Facts section, created as a panel -->
         <div class="panel-heading text-center"><h2>Quick Facts</h2></div>
-            <div class="panel-body">
+            <div class="panel-body" id="borders">
                 <ul>
                     <li>Fact 1</li>
                     <li>Fact 2</li>
@@ -28,7 +30,7 @@
         <!-- Top Ten States Section -->
         <!-- Seperate Panel to Quick Facts -->
         <div class="panel-heading text-center"><h2>Top 10 States with Most Reported Cases</h2></div>
-        <div class="panel-body text-center">
+        <div class="panel-body text-center" id="borders">
             <ol>
                 <li> California - 1323 cases</li>
                 <li> Texas - 670 cases</li>
@@ -51,7 +53,7 @@
         <div class="panel-heading text-center"><h2>Whose effected the most?</h2></div>
 
         <!-- Panel Body -->
-        <div class="panel-body">
+        <div class="panel-body" id="borders">
 
             <!-- Gender Progress Bar -->
                 <h3>Gender</h3>
@@ -108,7 +110,7 @@
 
     <!-- Right Side of Page -->
     <!-- Created as a panel -->
-    <div class="panel col-md-offset-9">
+    <div class="panel col-md-offset-9" id="borders">
         <div class="panel-heading text-center"><h2>Sources</h2></div>
         <div class="panel-body text-center">
             <ul>
