Final edits to site documentation

--- a/Praesidium/Praesidium/Views/Admin/Site_Documentation.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Site_Documentation.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
     <div class="jumbotron" id="Admin_SD_jumbo">
-        <h1>Site Documentation</h1>
+    <h1>Site Documentation</h1>
     </div>
 </div>
 
@@ -14,7 +14,9 @@
     <div class="col-md-12">
 
         <h1>Edit Site Documentation</h1>
-
+        <a class='btn btn-lg btn-primary' style="margin-bottom:2%;">
+            Add Documentation
+        </a>
         <table class="table" id="Admin_SD_table">
             <thead>
                 <tr>
@@ -23,6 +25,7 @@
                     <th>Editor</th>
                     <th>Reason</th>
                 </tr>
+               
             </thead>
             <tbody>
                 <tr>
@@ -30,57 +33,53 @@
                     <td>10/12/2017</td>
                     <td>Caleb Samborski</td>
                     <td>Edited function</td>
-                    <td><a class="btn btn-lg btn-success" style="padding-right:5%;">Edit</a><a class='btn btn-lg btn-danger'>Delete</a></td>
+                    <td><a class="btn btn-sm btn-success" style="margin-right:5%;"><span class="glyphicon glyphicon-pencil"></span></a><a class='btn btn-sm btn-danger'><span class="glyphicon glyphicon-trash"></a></td>
                 </tr>
                 <tr>
                     <td>Home</td>
                     <td>10/12/2017</td>
                     <td>Abigail Hererra</td>
                     <td>Added Content</td>
-                    <td><a class="btn btn-lg btn-success" style="padding-right:5%;">Edit</a><a class='btn btn-lg btn-danger'>Delete</a></td>
+                    <td><a class="btn btn-sm btn-success" style="margin-right:5%;"><span class="glyphicon glyphicon-pencil"></span></a><a class='btn btn-sm btn-danger'><span class="glyphicon glyphicon-trash"></a></td>
                 </tr>
                 <tr>
                     <td>Human Trafficking</td>
                     <td>10/12/2017</td>
                     <td>Blake Budreau</td>
                     <td>Omitted Content</td>
-                    <td><a class="btn btn-lg btn-success" style="padding-right:5%;">Edit</a><a class='btn btn-lg btn-danger'>Delete</a></td>
+                    <td><a class="btn btn-sm btn-success" style="margin-right:5%;"><span class="glyphicon glyphicon-pencil"></span></a><a class='btn btn-sm btn-danger'><span class="glyphicon glyphicon-trash"></a></td>
                 </tr>
                 <tr>
                     <td>Cyber Security</td>
                     <td>10/12/2017</td>
                     <td>Tyler VerMerris</td>
-                    <td>N</td>
-                    <td><a class="btn btn-lg btn-success" style="padding-right:5%;">Edit</a><a class='btn btn-lg btn-danger'>Delete</a></td>
+                    <td>Did Nothing</td>
+                    <td><a class="btn btn-sm btn-success" style="margin-right:5%;"><span class="glyphicon glyphicon-pencil"></span></a><a class='btn btn-sm btn-danger'><span class="glyphicon glyphicon-trash"></a></td>
                 </tr>
                 <tr>
                     <td>About</td>
                     <td>10/12/2017</td>
                     <td>Caleb Samborski</td>
                     <td>Added a sentence</td>
-                    <td><a class="btn btn-lg btn-success" style="padding-right:5%;">Edit</a><a class='btn btn-lg btn-danger'>Delete</a></td>
+                    <td><a class="btn btn-sm btn-success" style="margin-right:5%;"><span class="glyphicon glyphicon-pencil"></span></a><a class='btn btn-sm btn-danger'><span class="glyphicon glyphicon-trash"></a></td>
                 </tr>
                 <tr>
                     <td>Contact</td>
                     <td>10/12/2017</td>
                     <td>Caleb Samborski</td>
                     <td>Changed the Name</td>
-                    <td><a class="btn btn-lg btn-success" style="padding-right:5%;">Edit</a><a class='btn btn-lg btn-danger'>Delete</a></td>
+                    <td><a class="btn btn-sm btn-success" style="margin-right:5%;"><span class="glyphicon glyphicon-pencil"></span></a><a class='btn btn-sm btn-danger'><span class="glyphicon glyphicon-trash"></a></td>
                 </tr>
             </tbody>
-            <tfoot>
-                <a class='btn btn-lg btn-primary'>Add Documentation</a></td>
-            </tfoot>
+     
         </table>
 
     </div>
 </div>
 
-    <div class="row container-fluid" id="borders">
+    <div class="row container-fluid" >
 
-    <p class="h1" style="text-align:center;"><strong>Site Documentation</strong></p><br />
-
-    <div class=" well col-md-12">
+    <div class="well col-md-12" id="borders">
 
         <p class="h2" style="text-align:center;"><strong>Emergency Exit Button</strong></p><br />
         <p>
@@ -93,9 +92,9 @@
         </p>
     </div>
     </div>
-    <div class="row container-fluid" id="borders">
+    <div class="row container-fluid">
 
-    <div class="well col-md-12">
+    <div class="well col-md-12" id="borders">
 
         <p class="h2" style="text-align:center;"><strong>Home</strong></p><br />
         <p>
@@ -105,9 +104,9 @@
         </p>
     </div>
 </div>
-<div class="row container-fluid" id="borders">
+<div class="row container-fluid">
 
-    <div class="well col-md-12">
+    <div class="well col-md-12" id="borders">
 
         <p class="h2" style="text-align:center;"><strong>Human Trafficking</strong></p><br />
         <p>
@@ -128,9 +127,9 @@
         </p>
     </div>
 </div>
-<div class="row container-fluid" id="borders">
+<div class="row container-fluid">
 
-    <div class="well col-md-12">
+    <div class="well col-md-12" id="borders">
 
         <p class="h2" style="text-align:center;"><strong>Cyber Security</strong></p><br />
 
@@ -152,9 +151,9 @@
         </p>
     </div>
 </div>
-<div class="row container-fluid" id="borders">
+<div class="row container-fluid">
 
-    <div class="well col-md-12">
+    <div class="well col-md-12" id="borders">
 
         <p class="h2" style="text-align:center;"><strong>About</strong></p><br />
         <p>
@@ -162,9 +161,9 @@
         </p>
     </div>
 </div>
-<div class="row container-fluid" id="borders">
+<div class="row container-fluid" >
 
-    <div class="well col-md-12">
+    <div class="well col-md-12" id="borders">
 
         <p class="h2" style="text-align:center;"><strong>Contact</strong></p><br />
         <p>
