--- a/Praesidium/Praesidium/Views/Admin/AddFile.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/AddFile.cshtml
@@ -16,10 +16,9 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.FileName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("File", new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FileName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FileName, "", new { @class = "text-danger" })
+                <input type="file" id="File" name="upload" />
             </div>
         </div>
 
