--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -4,6 +4,9 @@
     padding-bottom: 0;
     padding-top: 50px;
     margin-bottom: 0;
+    width: 100%;
+    max-width: 100% !important;
+    margin: auto;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -46,7 +49,7 @@ textarea {
 footer {
     display: block;
     position: relative;
-    bottom: ;
+    bottom: 0;
     width: 100%;
     min-height: 180px; /* Height of the footer */
     padding-top: 10px;
@@ -121,7 +124,7 @@ footer {
 
 .searchArea {
     z-index: 1400;
-    background-color: #e95420 !important;
+    background-color: black !important;
     width: 10%;
     height: 30px !important;
     position: fixed;
@@ -137,7 +140,7 @@ footer {
     top: 0;
     left: 0;
     border-bottom: 30px solid white;
-    border-right: 30px solid #e95420;
+    border-right: 30px solid black;
     width: 0;
 }
 
@@ -418,25 +421,30 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
 }
 
 .dropdown > a:hover {
-    background-color: #e95420 !important;
+    background-color: black !important;
 }
 
 .dropdown-menu {
-    background-color: #e95420;
+    background-color: black;
     border: none;
 }
 
 .dropdown-menu > li > a {
     font-weight: bold !important;
+    color: #fff;
 }
 
 .dropdown-menu > li > a:hover {
-    background-color: #e95420 !important;
+    background-color: #333333 !important;
 }
 
 .navbar-inverse .navbar-nav > .dropdown > a .caret {
-    border-top-color: #000;
-    border-bottom-color: #000;
+    border-top-color: #fff;
+    border-bottom-color: #fff;
+}
+
+.navbar-brand {
+    width: 155px !important;
 }
 
 
