--- a/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
@@ -9,7 +9,7 @@
 
 <h2>NavigationItems</h2>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "NavigationItemsCreate")
 </p>
 <table class="table">
     <tr>
@@ -61,15 +61,16 @@
             @Html.DisplayFor(modelItem => item.ShSySection.Name)
         </td>
         <td>
-            <button style="font-family: 'Agency FB'; color: white" id="editModal" data-target="#edit" data-toggle="modal" data-id="@item.RecId" data-controller="@item.Controller" data-action="@item.Action" data-displaytext="@item.DisplayText" data-section="@item.FkShSySection" data-active="@item.IsActive"><span class="glyphicon glyphicon-edit"></span></button> |
-            @Html.ActionLink("Details", "Details", new { id=item.RecId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.RecId })
+            @*<button style="font-family: 'Agency FB'; color: white" id="editModal" data-target="#edit" data-toggle="modal" data-id="@item.RecId" data-controller="@item.Controller" data-action="@item.Action" data-displaytext="@item.DisplayText" data-section="@item.FkShSySection" data-active="@item.IsActive"><span class="glyphicon glyphicon-edit"></span></button> |*@
+            @Html.ActionLink("Edit", "NavigationItemsEdit", new { id=item.RecId}) |
+            @Html.ActionLink("Details", "NavigationItemsDetails", new { id=item.RecId }) |
+            @Html.ActionLink("Delete", "NavigationItemsDelete", new { id=item.RecId })
         </td>
     </tr>
 }
 </table>
 
-<div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+@*<div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -103,9 +104,9 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
-<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+@*<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -151,4 +152,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
