--- a/Praesidium/Praesidium/Views/Admin/Sections.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Sections.cshtml
@@ -1,143 +1,39 @@
-﻿
+﻿@model IEnumerable<Praesidium.Data_Models.Admin.ShSySection>
+
 @{
     ViewBag.Title = "Sections";
 }
 
-<div class="container">
-    <div class="row">
-        <h2>Sections Admin Table</h2>
-        <p data-placement="top" data-toggle="tooltip" title="Create New"><button class="btn btn-primary btn-primary btn pull-right" data-title="Create New" data-toggle="modal" data-target="#createNew">Create New</button></p>
-    </div>
-</div>
+<h2>Sections</h2>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="table-responsive">
-                <table id="mytable" class="table table-bordred table-striped">
-                    <thead>
-                        <tr>
-                            <th>RecID</th>
-                            <th>Section Name</th>
-                            <th>Is Active</th>
-                            <th>Edit</th>
-                            <th>Delete</th>
-                        </tr>
-                    </thead>
+<p>
+    @Html.ActionLink("Create New", "SectionsCreate")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IsActive)
+        </th>
+        <th></th>
+    </tr>
 
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Main Navigation</td>
-                            <td>Yes</td>
-                            <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button></p></td>
-                            <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button></p></td>
-                        </tr>
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.IsActive)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "SectionsEdit", new { id=item.RecId }) |
+            @Html.ActionLink("Details", "SectionsDetails", new { id=item.RecId }) |
+            @Html.ActionLink("Delete", "SectionsDelete", new { id=item.RecId })
+        </td>
+    </tr>
+}
 
-                        <tr>
-                            <td>2</td>
-                            <td>Trafficking</td>
-                            <td>Yes</td>
-                            <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button></p></td>
-                            <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button></p></td>
-                        </tr>
-
-                        <tr>
-                            <td>3</td>
-                            <td>Cyber Security</td>
-                            <td>Yes</td>
-                            <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button></p></td>
-                            <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button></p></td>
-                        </tr>
-
-                        <tr>
-                            <td>4</td>
-                            <td>Admin</td>
-                            <td>No</td>
-                            <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button></p></td>
-                            <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button></p></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                <h4 class="modal-title custom_align" id="Heading">Edit Section</h4>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <h5>RecID</h5>
-                    <input class="form-control " type="text" placeholder="1">
-                </div>
-                <div class="form-group">
-                    <h5>Section Name</h5>
-                    <input class="form-control " type="text" placeholder="Main Navigation">
-                </div>
-                <div class="form-group">
-                    <h5>Is Active</h5>
-                    <input type="checkbox" class="checkthis" checked />
-                </div>
-                <div class="modal-footer ">
-                    <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok-sign"></span> Save</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                <h4 class="modal-title custom_align" id="Heading">Delete this section</h4>
-            </div>
-            <div class="modal-body">
-
-                <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Are you sure you want to delete this section?</div>
-
-            </div>
-            <div class="modal-footer ">
-                <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> No</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="createNew" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                <h4 class="modal-title custom_align" id="Heading">New Section</h4>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <h5>RecID</h5>
-                    <input class="form-control " type="text">
-                </div>
-                <div class="form-group">
-                    <h5>Section Name</h5>
-                    <input class="form-control " type="text">
-                </div>
-                <div class="form-group">
-                    <h5>Is Active</h5>
-                    <input type="checkbox" class="checkthis" />
-                </div>
-            </div>
-            <div class="modal-footer ">
-                <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok-sign"></span> Create</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!--referece: http://bootsnipp.com/snippets/featured/bootstrap-snipp-for-datatable-->
+</table>
