--- a/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
@@ -66,91 +66,11 @@
             </tr>
         }
     </table>
-</div>
-
-@Html.PagedListPager(Model, page => Url.Action("NavigationItems",
+    <div style="text-align: center;">
+        @Html.PagedListPager(Model, page => Url.Action("NavigationItems",
     new { page }))
-
-@*<div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                <h4 class="modal-title custom_align" id="Heading">Edit Navigation Item</h4>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <h5>Controller: </h5>
-                    <input type="text" class="form-control" name="controller" id="controller" value="" readonly/>
-                </div>
-                <div class="form-group">
-                    <label>Action: </label>
-                    <input class="form-control" type="text" name="action" id="action" value="" readonly>
-                </div>
-                <div class="form-group">
-                    <label>Display Text: </label>
-                    <input class="form-control" type="text" name="displayText" id="displayText" value="">
-                </div>
-                <div class="form-group">
-                    <label>Section: </label>
-                    @Html.DropDownList("ddlSections", new SelectList(ViewBag.Sections, "RecId", "Name"), new { @class = "form-control" })
-                </div>
-                <div class="form-group">
-                    <label>Active: </label>
-                    <input type="checkbox" name="active" id="active" value=""/>
-                </div>
-                <div class="modal-footer ">
-                    <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok-sign"></span> Save</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>*@
-
-@*<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                <h4 class="modal-title custom_align" id="Heading">Delete this section</h4>
-            </div>
-            <div class="modal-body">
-
-                <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Are you sure you want to delete this section?</div>
-
-            </div>
-            <div class="modal-footer ">
-                <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> No</button>
-            </div>
-        </div>
     </div>
 </div>
 
-<div class="modal fade" id="createNew" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                <h4 class="modal-title custom_align" id="Heading">New Section</h4>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <h5>RecID</h5>
-                    <input class="form-control " type="text">
-                </div>
-                <div class="form-group">
-                    <h5>Section Name</h5>
-                    <input class="form-control " type="text">
-                </div>
-                <div class="form-group">
-                    <h5>Is Active</h5>
-                    <input type="checkbox" class="checkthis" />
-                </div>
-            </div>
-            <div class="modal-footer ">
-                <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok-sign"></span> Create</button>
-            </div>
-        </div>
-    </div>
-</div>*@
+
+
