--- a/Praesidium/Praesidium/Views/Admin/Files.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Files.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.FileName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FileStore)
+            Content
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FkShSySection)
@@ -50,7 +50,12 @@
             @Html.DisplayFor(modelItem => item.FileName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.FileStore)
+            @*@Html.DisplayFor(modelItem => item.FileStore)*@
+            @{
+                var base64 = Convert.ToBase64String(item.FileStore);
+                var filesrc = string.Format("data:{1};base64,{0}", base64,item.ContentType);
+            }
+            <a href='@filesrc'>Download</a>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FkShSySection)
