--- a/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Add a file";
 }
 
-@using (Html.BeginForm("SaveFile","Admin",FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("FilesCreate","Admin",FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <script src="~/scripts/tinymce/tinymce.min.js"></script>
@@ -47,7 +47,7 @@
             <div class="form-group">
                 @Html.Label("File", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="file" id="File" name="upload" />
+                    <input type="file" id="upload" name="upload" />
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="submit" class="btn btn-default" />
                 </div>
             </div>
         </div>
