--- a/Praesidium/Praesidium/Views/Admin/Files.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Files.cshtml
@@ -76,7 +76,7 @@
             @Html.DisplayFor(modelItem => item.DateModified)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Edit", "FilesEdit", new { id=item.RecId }) |
             @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
