--- a/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
@@ -52,7 +52,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.FkShSySection, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.FkShSySection,"Section", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("FkShSySection", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.FkShSySection, "", new { @class = "text-danger" })
@@ -68,9 +68,9 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.UploadedBy, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.UploadedBy,"Uploaded by", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("UploadedBy", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownList("UploadedBy", (SelectList)ViewBag.users, "Please select", htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.UploadedBy, "", new { @class = "text-danger" })
                 </div>
             </div>
