--- a/Praesidium/Praesidium/Views/Admin/FilesEdit.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesEdit.cshtml
@@ -2,7 +2,7 @@
 @model Praesidium.Data_Models.Admin.ShFile
 
 @{
-    ViewBag.Title = "Editing file " + Model.FileName;
+    ViewBag.Title = "Editing file";
 }
 
 
