--- a/Praesidium/Praesidium/Views/Admin/Files.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Files.cshtml
@@ -51,11 +51,12 @@
         </td>
         <td>
             @*@Html.DisplayFor(modelItem => item.FileStore)*@
-            @{
+            @*@{
                 var base64 = Convert.ToBase64String(item.FileStore);
                 var filesrc = string.Format("data:{1};base64,{0}", base64,item.ContentType);
             }
-            <a href='@filesrc'>Download</a>
+            <a href='@filesrc'>Download</a>*@
+            @Html.ActionLink("Download File","File","Download",new { id=item.RecId},null)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FkShSySection)
